--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -162,6 +162,7 @@
     <Compile Include="View\Menu\Search\DrinkSearchController.cs" />
     <Compile Include="View\Menu\Search\DrinkSearchResultsViewController.cs" />
     <Compile Include="View\Menu\Search\SearchResultCell.cs" />
+    <Compile Include="Util\RestService.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Microsoft-Yi-Baiti.ttf" />
