moved WebSocketUtil to Core project

--- a/BarBot/BarBot/BarBot.Core.csproj
+++ b/BarBot/BarBot/BarBot.Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Model\DrinkOrder.cs" />
     <Compile Include="Model\IODevice.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="WebSocket\WebSocketUtil.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
