--- a/BarBot/BarBot.UWP/BarBot.UWP.csproj
+++ b/BarBot/BarBot.UWP/BarBot.UWP.csproj
@@ -174,6 +174,7 @@
     <Compile Include="UserControls\Uc_RecipeTile.xaml.cs">
       <DependentUpon>Uc_RecipeTile.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Utils\Helpers.cs" />
     <Compile Include="Websocket\UWPWebsocketHandler.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -264,9 +265,7 @@
       <Name>Windows IoT Extensions for the UWP %28WindowsIoT, Version=10.0.14393.0%29</Name>
     </SDKReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Utils\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
