changed iOS ws and http calls to accept host name instead of IP address

--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -175,6 +175,7 @@
     <Compile Include="View\Detail\IngredientTable\IngredientTableViewCell.cs" />
     <Compile Include="View\Detail\IngredientTable\IngredientTableViewDelegate.cs" />
     <Compile Include="View\Detail\IngredientTable\Picker\AddIngredientPickerCell.cs" />
+    <Compile Include="Util\NetworkUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Microsoft-Yi-Baiti.ttf" />
