--- a/BarBot/BarBot.UWP/BarBot.UWP.csproj
+++ b/BarBot/BarBot.UWP/BarBot.UWP.csproj
@@ -188,6 +188,7 @@
     <Content Include="Assets\back_arrow.png" />
     <BundleResource Include="Assets\custom_recipe.png" />
     <Content Include="Assets\HexagonTile.png" />
+    <Content Include="Assets\HexagonTileGradient.png" />
     <Content Include="Assets\NextButton.png" />
     <Content Include="Assets\Drink_Menu_Image.png" />
     <Content Include="Assets\Order_Queue_Image.png" />
@@ -215,6 +216,11 @@
     <Page Include="TestClient\TestClient.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Rd_DrinkDetailCheckBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
     <Page Include="UserControls\Uc_AddIngredientButton.xaml">
       <SubType>Designer</SubType>
