--- a/BarBot/Droid/packages.config
+++ b/BarBot/Droid/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CallygraphyXamarin" version="2.2.0" targetFramework="monoandroid60" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid60" />
   <package id="Websockets.Pcl" version="1.1.9" targetFramework="monoandroid60" developmentDependency="true" />
