--- a/BarBot/iOS/packages.config
+++ b/BarBot/iOS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
+  <package id="modernhttpclient" version="2.4.2" targetFramework="xamarinios10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
   <package id="Splat" version="2.0.0" targetFramework="xamarinios10" />
   <package id="Square.SocketRocket" version="0.5.0.1" targetFramework="xamarinios10" />
